--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>ポイ活アプリ</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>🎯 ポイ活アプリ 🎯</h1>
 
+  <div id="pointsDisplay">
+    <div class="yen">0円</div>
+    <div class="points">0ポイント</div>
+  </div>
+
+  <button id="checkinButton">📅 今日のチェックイン</button>
+
+  <button id="adButton">📺 広告視聴</button>
+  <div id="adInfo">残り視聴回数: <span id="adRemaining">30</span></div>
+
+  <div id="rewardArea"></div>
+
+  <script src="script.js"></script>
+</body>
+</html>
