--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>ポイ活アプリ</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ポイントアプリ（TikTok Lite風）</title>
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="app.js"></script>
 </head>
 <body>
-  <h1>🎯 ポイ活アプリ 🎯</h1>
+  <div id="app">
+    <h1>🎁 広告を見てポイントGET 🎁</h1>
+    <div id="user-info"></div>
 
-  <div id="pointsDisplay">
-    <div class="yen">0円</div>
-    <div class="points">0ポイント</div>
+    <button id="loginGoogle">Googleでログイン</button>
+    <button id="loginEmail">メールでログイン</button>
+
+    <p id="points">現在のポイント: 0 pt</p>
+    <button id="watchAd">🎬 広告を見る</button>
+
+    <div id="status"></div>
+
+    <h3>管理者ページ（PayギフトURL登録）</h3>
+    <input type="text" id="payUrl" placeholder="PayギフトURLを入力">
+    <button id="saveUrl">登録</button>
+    <div id="urlList"></div>
+
+    <!-- Google AdMob 広告 -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-9504316266132870"
+         data-ad-slot="3784897026"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9504316266132870" crossorigin="anonymous"></script>
   </div>
-
-  <button id="checkinButton">📅 今日のチェックイン</button>
-
-  <button id="adButton">📺 広告視聴</button>
-  <div id="adInfo">残り視聴回数: <span id="adRemaining">30</span></div>
-
-  <div id="rewardArea"></div>
-
-  <script src="script.js"></script>
 </body>
 </html>
